--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,7 +21,7 @@ and open the template in the editor.
             <button type="button" onclick="Substract();">Substract</button>
             <button type="button" onclick="Multiply();">Multiply</button>
             <button type="button" onclick="Divide();">Divide</button>
-            <p>The result is:<span id="The-result"></span></p><!-- comment -->
+            <p>The result is:<span id="The-result"></span></p>
         </form>
         <script type="text/javascript" >
             function Add()
